<resources>
    <string name="app_name">FraseMotivacional</string>
    <string name="errorInput">Please insert your name</string>
    <string name="hola">"Hola "</string>
    <string name="take_photo">Take photo</string>
    <string name="back_to_login">Back to Login</string>
    <string name="welcome">Welcome </string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accesoCorrecto">"Join the aplication "</string>
    <string name="ttlSpinner">"Select your mood "</string>
    <string name="FraseMotivacional">"Frase Motivacional</string>
    <string name="title">Frase Motivacional</string>
</resources>